# rich-thumbnail-uploader

./: CHANGES.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  errors.rs  image_processor.rs  lib.rs  main.rs
src/models/: imgur.rs
src/uploaders/: catbox.rs  imgur.rs  mod.rs
tests/: integration_test.rs
