[package]
name = "rich-thumbnail-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.88" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
image = { version = "0.25" }
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "multipart",
    "default-tls",
    "json",
] }
thiserror = "2.0.12"
clap = { version = "4.5.35", default-features = false, features = [
    "std",
    "help",
    "derive",
] }

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction
panic = 'abort'   # Remove panic unwinding code
strip = true      # Strip symbols from binary
