[package]
name = "rich-thumbnail-uploader"
description = "Thumbnail uploader for foo_discord_rich"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cod3ddot/rich-thumbnail-uploader"
authors = ["cod3ddot <cod3ddot@proton.me>"]
readme = "README.md"
categories = ["command-line-utilities"]
publish = false

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
async-trait = { version = "0.1.88" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
image = { version = "0.25" }
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "multipart",
    "default-tls",
    "json",
] }
thiserror = "2.0.12"
clap = { version = "4.5.35", default-features = false, features = [
    "std",
    "help",
    "derive",
] }

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Remove panic unwinding code
strip = true      # Strip symbols from binary

[dev-dependencies]
tempfile = "3.10.1"
